# umari

./: .gitignore  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  OPENAPI.md  README.md  UPLOAD_REFACTOR.md  accounts-projection.db  accounts-projection.sqlite  accounts-projection.sqlite-shm  accounts-projection.sqlite-wal  devenv.nix  effect-load_google.sqlite  effect-load_google.sqlite-shm  effect-load_google.sqlite-wal  open_issues-projection.sqlite  open_issues-projection.sqlite-shm  open_issues-projection.sqlite-wal  projector-open_issues.sqlite  projector-open_issues.sqlite-shm  projector-open_issues.sqlite-wal  runtime.db  runtime.sqlite
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs
crates/api/src/routes/: execute.rs  mod.rs
crates/api/src/routes/modules/: activate.rs  active.rs  env_vars.rs  list.rs  mod.rs  types.rs  upload.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs  output.rs
crates/cli/src/commands/: commands.rs  effects.rs  env_vars.rs  execute.rs  mod.rs  modules.rs  new.rs  policies.rs  projections.rs  projectors.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  domain_id.rs  effect.rs  emit.rs  error.rs  event.rs  folds.rs  lib.rs  macros.rs  params.rs  policy.rs  projection.rs  projector.rs  rules.rs  runtime.rs  sqlite.rs
crates/core/src/runtime/: command.rs  common.rs  effect.rs  policy.rs  projection.rs  projector.rs  sqlite.rs
crates/macros/: Cargo.toml
crates/macros/src/: derive_command_input.rs  derive_domain_ids.rs  derive_event.rs  derive_event_set.rs  derive_from_domain_ids.rs  export_command.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: compile_cache.rs  effect.rs  effect_journal.rs  events.rs  lib.rs  main.rs  module.rs  output.rs  supervisor.rs  worker.rs
crates/runtime/src/command/: actor.rs  mod.rs
crates/runtime/src/effect/: actor.rs  mod.rs  supervisor.rs
crates/runtime/src/module/: actor.rs  supervisor.rs
crates/runtime/src/module_store/: actor.rs  mod.rs  sqlite.rs
crates/runtime/src/policy/: actor.rs  mod.rs  supervisor.rs
crates/runtime/src/projection/: actor.rs  mod.rs  supervisor.rs  wit.rs
crates/runtime/src/projector/: actor.rs  mod.rs  supervisor.rs
crates/runtime/src/store/: actor.rs  mod.rs  sqlite.rs
crates/runtime/src/wit/: command.rs  common.rs  effect.rs  mod.rs  policy.rs  projection.rs  projector.rs  sqlite.rs
crates/server/: Cargo.toml
crates/server/src/: banner.rs  main.rs  tracing_subscriber.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  execute.rs  lib.rs  modules.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  error.rs  htmx.rs  layout.rs  lib.rs
crates/ui/src/routes/: activate.rs  active.rs  commands.rs  effects.rs  env_vars.rs  events.rs  execute.rs  index.rs  mod.rs  policies.rs  projectors.rs  replay.rs  upload.rs
crates/umari/: Cargo.toml
crates/umari/src/: command.rs  domain_id.rs  effect.rs  emit.rs  enforce.rs  error.rs  event.rs  fold_query.rs  folds.rs  lib.rs  macros.rs  params.rs  policy.rs  projector.rs  rules.rs  runtime.rs  sqlite.rs
crates/umari/src/runtime/: command.rs  common.rs  effect.rs  policy.rs  projector.rs  sqlite.rs
crates/umari/wit/command/: deps.toml  executor.wit  world.wit
crates/umari/wit/common/: types.wit  world.wit
crates/umari/wit/effect/: deps.toml  effect.wit  world.wit
crates/umari/wit/policy/: world.wit
crates/umari/wit/projector/: projector.wit  world.wit
crates/umari/wit/sqlite/: statement.wit
example/: Cargo.toml
example/commands/open_account/: Cargo.toml
example/commands/open_account/src/: lib.rs
example/events/: Cargo.toml
example/events/src/: lib.rs
example/projections/accounts/: Cargo.toml
example/projections/accounts/src/: lib.rs
example/projectors/accounts/src/: lib.rs
plans/: js-sdk.md
umari-data/: effect-load-google.sqlite  projector-open-issues.sqlite  projector-open-issues.sqlite-shm  projector-open-issues.sqlite-wal
umari-data-warranti/: effect-register-shopify-webhooks.sqlite  effect-register-shopify-webhooks.sqlite-shm  effect-register-shopify-webhooks.sqlite-wal  projector-shops.sqlite  projector-shops.sqlite-shm  projector-shops.sqlite-wal
wit/: command.wit
wit/command/: command.wit  executor.wit  world.wit
wit/common/: types.wit
wit/effect/: deps.toml  effect.wit  world.wit
wit/policy/: policy.wit
wit/projection/: deps.toml  projection.wit
wit/sqlite/: connection.wit  statement.wit  types.wit
