[workspace]
resolver = "3"
members = [
  "crates/api",
  "crates/cli",
  "crates/core",
  "crates/macros",
  "crates/runtime",
  "example/events",
  # "example/commands/open_account",
  # "example/projections/accounts",
]

[workspace.dependencies]
umari-api = { path = "crates/api" }
umari-core = { path = "crates/core" }
umari-macros = { path = "crates/macros" }
umari-runtime = { path = "crates/runtime" }

# Example
events = { path = "example/events" }
wit-bindgen = "0.53"

axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
indexmap = { version = "2.13", features = ["serde"] }
kameo = { path = "/home/ari/dev/tqwewe/kameo" } # { git = "https://github.com/tqwewe/kameo", branch = "main" }
kameo_actors = { path = "/home/ari/dev/tqwewe/kameo/actors" } # { git = "https://github.com/tqwewe/kameo", branch = "main", package = "kameo_actors" }
libc = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rusqlite = "0.38"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slotmap = "1.1"
strum = { version = "0.28", features = ["derive"] }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
umadb-client = { git = "https://github.com/tqwewe/umadb", branch = "feat/serde" }
umadb-dcb = { git = "https://github.com/tqwewe/umadb", branch = "feat/serde", features = ["serde"] }
uuid = { version = "1.22", features = ["serde", "v4"] }
wasmtime = "42.0"
wasmtime-wasi = "42.0"
