[workspace]
resolver = "3"
members = [
  "crates/api",
  "crates/cli",
  "crates/core",
  "crates/macros",
  "crates/runtime",
  "crates/server",
  "crates/types",
  "crates/ui",
  "example/events",
  # "example/commands/open_account",
  # "example/projectors/accounts",
]

[workspace.dependencies]
umari-api = { path = "crates/api" }
umari-core = { path = "crates/core" }
umari-macros = { path = "crates/macros" }
umari-runtime = { path = "crates/runtime" }
umari-types = { path = "crates/types" }
umari-ui = { path = "crates/ui" }


# Example
events = { path = "example/events" }

axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hex = "0.4"
indexmap = { version = "2.13", features = ["serde"] }
kameo = { path = "/home/ari/dev/tqwewe/kameo" } # { git = "https://github.com/tqwewe/kameo", branch = "main" }
kameo_actors = { path = "/home/ari/dev/tqwewe/kameo/actors" } # { git = "https://github.com/tqwewe/kameo", branch = "main", package = "kameo_actors" }
libc = "0.2"
maud = { version = "0.27", features = ["axum"] }
proc-macro2 = "1.0"
quote = "1.0"
rusqlite = "0.39"
schemars = "1.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
slotmap = "1.1"
strum = { version = "0.28", features = ["derive"] }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
umadb-client = { git = "https://github.com/tqwewe/umadb", branch = "feat/serde" }
umadb-dcb = { git = "https://github.com/tqwewe/umadb", branch = "feat/serde", features = ["serde"] }
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.22", features = ["serde", "v4"] }
wasip2 = "1.0.2"
wasmtime = "43.0"
wasmtime-wasi = "43.0"
wasmtime-wasi-http = "43.0"
wit-bindgen = { path = "/home/ari/dev/bytecodealliance/wit-bindgen/crates/guest-rust" } # "0.53"

# CLI dependencies
anyhow = "1.0"
comfy-table = "7.1"
colored = "3.1"
indicatif = "0.18"
toml_edit = "0.25"
ureq = "3.2"
