[workspace]
resolver = "3"
members = [
  "crates/api",
  "crates/cli",
  "crates/core",
  "crates/macros",
  "crates/runtime",
  "crates/server",
  "crates/types",
  "crates/ui",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
umari-api = { path = "crates/api" }
umari-core = { path = "crates/core" }
umari-macros = { path = "crates/macros" }
umari-runtime = { path = "crates/runtime" }
umari-types = { path = "crates/types" }
umari-ui = { path = "crates/ui" }

anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.1"
comfy-table = "7.1"
futures-util = "0.3"
garde = { path = "/home/ari/dev/jprochazk/garde/garde", version = "0.22" }
hex = "0.4"
humantime = "2.3"
indexmap = { version = "2.13", features = ["serde"] }
indicatif = "0.18"
kameo = { git = "https://github.com/tqwewe/kameo", branch = "main" }
kameo_actors = { git = "https://github.com/tqwewe/kameo", branch = "main", package = "kameo_actors" }
libc = "0.2"
maud = { version = "0.27", features = ["axum"] }
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rusqlite = "0.39"
schemars = { path = "/home/ari/dev/GREsau/schemars/schemars", version = "1.2" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.11"
slotmap = "1.1"
strum = { version = "0.28", features = ["derive"] }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
umadb-client = "0.5"
umadb-dcb = "0.5"
ureq = "3.2"
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.22", features = ["serde", "v4", "v5"] }
wasip2 = "1.0.2"
wasmtime = { version = "43.0", default-features = false, features = [
  "addr2line",
  "anyhow",
  "async",
  "cache",
  "compile-time-builtins",
  "component-model",
  "component-model-async",
  "coredump",
  "cranelift",
  "debug",
  "debug-builtins",
  "demangle",
  "gc",
  "gc-drc",
  "gc-null",
  "parallel-compilation",
  "pooling-allocator",
  "profiling",
  "runtime",
  "stack-switching",
  "std",
  "threads",
  "wat",
] }
wasmtime-wasi = "43.0"
wasmtime-wasi-http = "43.0"
wit-bindgen = { path = "/home/ari/dev/bytecodealliance/wit-bindgen/crates/guest-rust" } # "0.53"
