[package]
name = "umari-api"
edition = "2024"

[dependencies]
umari-core.workspace = true
umari-runtime = { workspace = true, features = ["openapi"] }
umari-types = { workspace = true, features = ["openapi"] }
umari-ui.workspace = true

axum.workspace = true
hex.workspace = true
kameo.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# strum.workspace = true
# thiserror.workspace = true
tokio.workspace = true
umadb-client.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
# tracing-subscriber.workspace = true
# wasmtime.workspace = true
