[package]
name = "umari-cli"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "umari"
path = "src/main.rs"

[dependencies]
umari-types.workspace = true

anyhow.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
ureq.workspace = true
