[package]
name = "umari-core"
edition = "2024"

[dependencies]
umari-macros.workspace = true

chrono.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
umadb-dcb.workspace = true
uuid.workspace = true
wit-bindgen.workspace = true
