[package]
name = "umari-core"
edition = "2024"

[dependencies]
umari-macros.workspace = true

chrono.workspace = true
garde.workspace = true
indexmap.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
umadb-dcb.workspace = true
uuid.workspace = true
wasip2.workspace = true
wit-bindgen.workspace = true
