[package]
name = "umari-runtime"
edition = "2024"
license.workspace = true

[dependencies]
umari-core.workspace = true

anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
kameo.workspace = true
kameo_actors.workspace = true
rand = { workspace = true, features = [] }
rusqlite.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slotmap.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
umadb-client.workspace = true
umadb-dcb.workspace = true
utoipa = { workspace = true, optional = true }
uuid.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[features]
openapi = ["utoipa"]
