[package]
name = "umari-server"
edition = "2024"

[[bin]]
name = "umari-server"
path = "src/main.rs"

[dependencies]
umari-api.workspace = true
umari-runtime.workspace = true

clap.workspace = true
kameo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
