[package]
name = "umari"
version = "0.2.1"
edition = "2024"
description = "SDK for building event-sourced WASM components for the Umari runtime"
license.workspace = true

[dependencies]
umari-macros.workspace = true

anyhow.workspace = true
chrono.workspace = true
indexmap.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
umadb-dcb.workspace = true
uuid.workspace = true
validator.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasip2.workspace = true
wit-bindgen.workspace = true
